fix profile picture on mobile

--- a/sass/components/_profile.scss
+++ b/sass/components/_profile.scss
@@ -21,7 +21,7 @@
 
     @include respond(phone) {
       width: 70%;
-      margin-left: 5.5rem;
+      margin-left: 5rem;
       margin-top: 2rem;
       box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2);
     }
